--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "crochet_backend",
+  "name": "fibre-fantasies-backend",
   "version": "1.0.0",
   "main": "server.js",
+  "type": "commonjs",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
@@ -19,7 +20,6 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "imagekit": "^6.0.0",
-    "imagekitio-next": "^1.0.1",
     "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.1.9",
     "pg": "^8.13.1",
